# zloth

./: .env.example  .gitignore  .zloth-plan.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  SPONSORS.md  blog-post.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.worker.yml  docker-compose.yml  install.sh  uninstall.sh
apps/api/: Dockerfile  pyproject.toml
apps/api/.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  _sitebuiltins.meta.json  _socket.data.json  (+192 more)
apps/api/.mypy_cache/3.13/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
apps/api/.mypy_cache/3.13/aiosqlite/: __init__.data.json  __init__.meta.json  __version__.meta.json  context.data.json  context.meta.json  core.data.json  core.meta.json  cursor.data.json  cursor.meta.json
apps/api/.mypy_cache/3.13/annotated_doc/: __init__.data.json  __init__.meta.json  main.data.json  main.meta.json
apps/api/.mypy_cache/3.13/annotated_types/: __init__.data.json  __init__.meta.json
apps/api/.mypy_cache/3.13/anthropic/: __init__.data.json  __init__.meta.json  _base_client.data.json  (+30 more)
apps/api/src/dursor_api/: config.py  dependencies.py  main.py
apps/api/src/tazuna_api/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/zloth_api/: __init__.py  cli.py  config.py  dependencies.py  error_handling.py  errors.py  main.py  worker.py
apps/api/tests/: conftest.py  test_ai_task_creator.py  test_ci_check.py  test_crypto_service.py  test_dao.py  test_decision_dao.py  test_enums.py  test_error_handling.py  test_evidence_service.py  test_git_service_push_with_retry.py  test_github_service.py  test_github_service_config.py  test_job_queue.py  test_job_worker.py  test_kanban_service.py  test_model_service.py  test_pr_service_fallback.py  test_push_with_retry_shallow.py  test_risk_service.py  test_routes.py  test_routes_github.py  test_run_service_conflict_resolution.py  test_run_service_refactor.py
(+9177 files in other folders)
