[project]
name = "zloth-api"
version = "0.1.0"
description = "zloth API Server - Multi-model parallel coding agent"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "gitpython>=3.1.41",
    "cryptography>=42.0.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-aiofiles>=24.1.0",
]

[project.scripts]
zloth = "zloth_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zloth_api"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# UP046: Allow Generic subclass pattern for backward compatibility
ignore = ["UP046"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
# Allow some common patterns that are hard to type
warn_return_any = false
disallow_any_generics = false
# Temporarily allow some relaxed type checks for incremental adoption
warn_unused_ignores = false

# Pydantic mypy plugin config
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "dotenv",
    "aiosqlite",
    "aiosqlite.*",
    "google.generativeai",
    "google.generativeai.*",
    "git",
    "git.*",
]
ignore_missing_imports = true
